# lunduke-transcripts

./: .env.example  .gitignore  AGENTS.md  README.md  WHERE_AM_I.md  architecture.md  context.md  design.md  lees-process.md  product-definition.md  project-plan.md  pyproject.toml  result-review.md  sprint-plan.md  sprint-review.md
agents/: adversarial-reviewer.md  educator.md  evidence-mapper.md  review-responder.md  script-writer.md  source-interpreter.md  technical-reviewer.md  tutorial-planner.md  validator.md  visual-editor.md
backlog/: schema.md  template.md
code-reviews/: review-2026-03-06.md
config/: channels.toml  channels.toml.example  tutorial-llm-router.example.yaml  tutorial-llm-router.yaml
renderers/: tutorial.css
scripts/: com.lunduke.transcripts.plist.example  run_pipeline.sh
skills/: backlog.md  code-review.md  definition-of-done.md  development-loop.md  documentation.md  evidence-mapping.md  frame-selection.md  grounding.md  learner-confusion-attack.md  public-artifact-hygiene.md  review-response.md  source-grounding-attack.md  technical-review.md  test-as-lee.md  tutorial-interpretation.md  tutorial-narrative.md  tutorial-navigation.md  tutorial-planning.md  tutorial-quality-review.md  tutorial-step-selection.md  tutorial-validation.md  tutorial-writing.md
tests/: test_article_writer.py  test_asr_plugins.py  test_config_env.py  test_llm_adapter.py  test_local_media_adapter.py  test_main_cli.py  test_orchestrator.py  test_project_contract.py  test_storage_paths.py  test_tutorial_pipeline.py  test_tutorial_prompts.py  test_vtt_parser.py  (+3 more)
(+48 files in other folders)
